--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,28 @@
+@charset "utf-8";
+body{
+  height:100%; /*ocupa el 100% de la pag*/
+  min-height:800px;/*esto lo modifica a gusto*/
+/*
+  text-align:center;
+	font-family:Helvetica,Futura,Arial,Verdana,sans-serif;
+	color: #CCC;*/
+  font-family:Helvetica,Futura,Arial,Verdana,sans-serif;
+  color: #222222;
+	margin: 0px;
+	border: 0px;
+  /* comienzo degradado*/
+  	background-color: #222222;
+  	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#444444), to(#222222));
+    	background-image: -webkit-linear-gradient(top, #444444, #222222);
+    	background-image: -o-linear-gradient(top, #444444, #222222);
+    	background-image: linear-gradient(to bottom, #444444, #222222);
+    	background-image: -moz-linear-gradient(top, #444444, #222222);
+    	background-repeat: repeat-x;
+    	filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff444444', endColorstr='#ff222222', GradientType=0);
+    	filter: progid:dximagetransform.microsoft.gradient(enabled=false); /*fin degradado*/
+
+}
+
 h1 {
   text-align: center;
 }
@@ -25,7 +50,7 @@ form{
 }
 
 form label{
-	width:144px;
+	width:200px;
 	font-weight:bold;
 	display:inline-block;
 }
